--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.gmail.ibmesp1</groupId>
     <artifactId>Backpacks</artifactId>
-    <version>1.4.2</version>
+    <version>2.0.0</version>
     <packaging>jar</packaging>
 
     <name>Backpacks</name>
@@ -23,8 +23,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>16</source>
-                    <target>16</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
             </plugin>
             <plugin>
