--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,3 +2,7 @@
 #en_US
 #es_ES
 locale: en_US
+
+# This is the en_US.yml version for reference.
+# ONLY EDIT ONCE ALL LANGUAGE FILES HAVE BEEN UPDATED.
+languageFile: 2
