--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: Backpacks
 version: '${project.version}'
-main: com.gmail.ibmesp1.Backpacks
+main: com.gmail.ibmesp1.bp.Backpacks
 api-version: 1.13
 authors: [ Ib ]
 
