--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,8 @@
+name: "&6[Backpacks] "
+
 # This is the config version for reference.
 # DO NOT EDIT VALUE.
-configVersion: 1
+configVersion: 2
 
 #Available languages
 #en_US
